appliance/base/default/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: huemie-local
  labels:
    huemie.space/namespace-role: core
  annotations:
    argocd.argoproj.io/sync-wave: "10"
